<resources>
    <string name="app_name">Agrociety</string>
    <string name="content_can_not_be_loaded">Content can not be loaded</string>

    <string name="progress_please_wait">Please Wait …</string>
    <string name="confirm_close_session">Do you want close session?</string>

    <string name="request_camera_permission_reason_text">
        We need access to your camera to update your profile picture
    </string>

    <!-- Login Screen -->
    <string name="login_main_title">Login now or register</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot_password_text">Forgot Password?</string>
    <string name="login_create_new_account_text">Create new Account</string>
    <string name="login_user_or_password_incorrect">User or password incorrect</string>

    <string name="login_button_text">Login</string>

    <!-- Reset Password-->
    <string name="reset_password_main_title">Forgot Password</string>
    <string name="reset_password_email_hint">Email</string>
    <string name="reset_password_description">Enter your email and will send you instructions on how reset it</string>
    <string name="reset_password_send">Send</string>
    <string name="reset_password_check_email">Email sent successfully, please check your email.</string>

    <!-- Signup -->
    <string name="signup_main_title">Signup</string>
    <string name="signup_button_text">Register</string>
    <string name="signup_go_to_login">Already have an account? Login</string>
    <string name="signup_name_hint">Name</string>
    <string name="signup_email_hint">Email</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_repeat_password_hint">Repeat Password</string>
    <string name="signup_check_email">Register successfully, please check your email for validate account.</string>


    <!-- Set Location -->

    <string name="set_location_main_title" formatted="false">Hi %s, Welcome to Agrociety</string>
    <string name="set_location_description">Please turn on your GPS to find out better services suggestions near you</string>
    <string name="set_location_turn_on_gps_button">Turn On GPS</string>
    <string name="set_location_reason_text">We need access to your GPS location for find out the best services suggestion near you</string>

    <string name="custom_bottom_navigation_behaviour">sanchez.sanchez.sergio.agrociety.ui.features.main.components.bottomnav.behaviour.CustomNavigationViewBehavior</string>

    <!-- User Profile -->
    <string name="user_name_default">Sergio Sánchez Sánchez</string>
    <string name="user_description_default">This is your BIO, this is your space to explain what you want about yourself</string>
    <string name="user_profile_my_groups">My Groups</string>

    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>

    <!-- User Detail -->
    <string name="user_detail_follow_btn">Follow</string>
    <string name="user_detail_unfollow_btn">Un follow</string>

    <!-- User Settings -->
    <string name="user_settings_title">Settings</string>
    <string name="user_settings_terms_and_conditions">Terms And Conditions</string>
    <string name="user_settings_about_agrociety">About Agrociety</string>
    <string name="user_settings_close_session">Close Session</string>
    <string name="user_settings_name_hint">Name</string>
    <string name="user_settings_surname_hint">Surname</string>
    <string name="user_settings_birthday">Birthday</string>
    <string name="user_settings_birthday_picker_title">Select your birthday</string>
    <string name="user_settings_profile_saved_successful">Update Successful</string>
    <string name="user_settings_change_photo_from_gallery">Photo from gallery</string>
    <string name="user_settings_change_photo_from_camera">Photo from camera</string>
    <string name="user_settings_reset_photo">Reset Photo</string>


    <!-- Conversations -->
    <string name="conversation_message_list_date_format">dd MMMM yyyy</string>
    <string name="hint_enter_a_message">Type a message…</string>
    <string name="sending_message_wait">sending wait …</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.
Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.
Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.
Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.
    </string>


    <!-- Post Detail -->
    <string name="post_detail_comment_hint">Add a comment</string>
    <string name="post_detail_comment_button_text">Comment</string>
    <string name="post_detail_like_this_post">Now you like this post</string>
    <string name="post_detail_no_like_this_post">Now you don\'t like this post</string>

    <!-- Search -->
    <string name="search_popular_title">POPULAR</string>
    <string name="search_most_recent_title">MOST RECENT</string>

</resources>
