<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/mainTitle"
        style="@style/MainTitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signup_main_title"
        app:layout_constraintBottom_toTopOf="@id/nameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/signup_name_hint"
        android:drawablePadding="@dimen/common_margin"
        android:drawableStart="@drawable/ic_name_edit_text_background"
        android:background="@drawable/common_edit_text_background"
        android:inputType="text"
        android:lines="1" tools:ignore="Autofill"
        android:layout_marginBottom="@dimen/common_margin"
        app:layout_constraintTop_toBottomOf="@id/mainTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/signup_email_hint"
        android:drawablePadding="@dimen/common_margin"
        android:drawableStart="@drawable/ic_email_edit_text_background"
        android:background="@drawable/common_edit_text_background"
        android:inputType="textEmailAddress"
        android:lines="1" tools:ignore="Autofill"
        android:layout_marginBottom="@dimen/common_margin"
        app:layout_constraintTop_toBottomOf="@id/nameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/signup_password_hint"
        android:drawablePadding="@dimen/common_margin"
        android:drawableStart="@drawable/ic_password_edit_text_background"
        android:background="@drawable/common_edit_text_background"
        android:inputType="textPassword"
        android:lines="1" tools:ignore="Autofill"
        android:layout_marginBottom="@dimen/common_margin"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/repeatPasswordInput"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/repeatPasswordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/signup_repeat_password_hint"
        android:drawablePadding="@dimen/common_margin"
        android:drawableStart="@drawable/ic_password_edit_text_background"
        android:background="@drawable/common_edit_text_background"
        android:inputType="textPassword"
        android:lines="1" tools:ignore="Autofill"
        android:layout_marginBottom="@dimen/common_margin"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/common_action_button_height"
        android:text="@string/signup_button_text"
        android:layout_marginBottom="@dimen/common_margin"
        style="@style/BrownieTheme.DefaultButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeatPasswordInput"
        app:layout_constraintBottom_toTopOf="@id/goToLogin"/>

    <Button
        android:id="@+id/goToLogin"
        style="@style/BrownieTheme.TextButton"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_go_to_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerButton"/>



</androidx.constraintlayout.widget.ConstraintLayout>