<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/mainTitle"
        style="@style/MainTitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_main_title"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        style="@style/DescriptionStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_description"
        app:layout_constraintBottom_toTopOf="@id/emailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainTitle" />


    <EditText
        android:id="@+id/emailInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/reset_password_email_hint"
        android:drawablePadding="@dimen/common_margin"
        android:drawableStart="@drawable/ic_email_edit_text_background"
        android:background="@drawable/common_edit_text_background"
        android:inputType="textEmailAddress"
        android:lines="1" tools:ignore="Autofill"
        android:layout_marginBottom="@dimen/common_margin"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sendButton"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/sendButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/common_action_button_height"
        android:text="@string/reset_password_send"
        android:layout_marginBottom="@dimen/common_margin"
        style="@style/BrownieCommonActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>