<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/home_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:fitsSystemWindows="true"
        android:background="@android:color/white"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleGravity="top"
            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:background="@color/colorPrimary"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/appIcon"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@string/content_can_not_be_loaded" />

                    <TextView
                        android:id="@+id/toolbar_title"
                        style="@style/AppTitleStyle"
                        android:layout_margin="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/app_name"
                        />

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- News Board -->
    <fragment
        android:id="@+id/newsBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        class="sanchez.sanchez.sergio.agrociety.ui.features.main.newsboard.NewsBoardFragment"
         />

    <sanchez.sanchez.sergio.agrociety.ui.features.main.components.bottomnav.CustomBottomNavigationView
        android:id="@+id/navigationBottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:space_item_icon_size="25dp"
        app:centre_button_color="@color/colorAccent"
        app:inactive_centre_button_icon_color="@android:color/white"
        app:active_centre_button_icon_color="@android:color/white"
        app:space_background_color="@android:color/white"
        app:active_item_color="@color/colorAccent"
        app:inactive_item_color="@color/textColorSecondary"
        app:centre_button_icon="@drawable/ic_plus"
        app:layout_behavior="@string/custom_bottom_navigation_behaviour"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>